# arroyo

./: .buildinfo  .craft.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.rst  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  ISSUE_FIX_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  architecture.html  backpressure.html  clippy.toml  dlqs.html  docker-compose.yml  docs-requirements.txt  genindex.html  getstarted.html  index.html  intro.html  metrics.html  mypy.ini  objects.inv  offsets.html  parameters.html  py-modindex.html  pytest.ini  requirements-linter.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  seer_rpc_endpoint_fix.py  (+5 more)
.doctrees/: architecture.doctree  backpressure.doctree  dlqs.doctree  environment.pickle  getstarted.doctree  index.doctree  intro.doctree  metrics.doctree  offsets.doctree  parameters.doctree  what_for.doctree
.doctrees/strategies/: batching.doctree  commit_offsets.doctree  filter.doctree  healthcheck.doctree  index.doctree  noop.doctree  produce.doctree  reduce.doctree  run_task.doctree  run_task_in_threads.doctree  run_task_with_multiprocessing.doctree  unfold.doctree
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  docs-pr.yml  docs.yml  enforce-license-compliance.yml  release.yml  rust-ci.yml
_sources/: backpressure.rst.txt  dlqs.rst.txt  getstarted.rst.txt  index.rst.txt  intro.rst.txt  metrics.rst.txt  offsets.rst.txt  what_for.rst.txt
_sources/strategies/: batching.rst.txt  commit_offsets.rst.txt  (+4 more)
_static/: custom.css  pygments.css
arroyo/: __init__.py  blq.py  codecs.py  commit.py  dlq.py  environment.py  errors.py  profiler.py  synchronized.py  types.py
rust-arroyo/: Cargo.toml
scripts/: bump-version.sh  bump_version.sh  create_metrics_def_json.py  run-kafka.sh
strategies/: batching.html  commit_offsets.html  filter.html  healthcheck.html  index.html  noop.html  produce.html  reduce.html  run_task.html  run_task_in_threads.html  run_task_with_multiprocessing.html  unfold.html
tests/: __init__.py  assertions.py  conftest.py  metrics.py  test_blq.py  test_commit.py  test_concurrent.py  test_dlq.py  test_kip848_e2e.py  test_metrics.py  test_retries.py  test_synchronized.py  test_types.py
(+181 files in other folders)
