[package]
name = "rust_arroyo"
version = "2.16.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "rust-arroyo/src/lib.rs"

[dependencies]
chrono = "0.4.26"
coarsetime = "0.1.33"
once_cell = "1.18.0"
rand = "0.8.5"
rdkafka = { version = "0.36.1", features = ["cmake-build", "tracing"] }
sentry = { version = "0.32.0" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["v4"] }
parking_lot = "0.12.1"

[dev-dependencies]
tracing-subscriber = "0.3.18"

[patch.crates-io]
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka" }

[[example]]
name = "base_processor"
path = "rust-arroyo/examples/base_processor.rs"

[[example]]
name = "transform_and_produce"
path = "rust-arroyo/examples/transform_and_produce.rs"

[[example]]
name = "base_consumer"
path = "rust-arroyo/examples/base_consumer.rs"
